Use a service account to access the spreadsheet